# OpenSearch_Scrape

./: .env.example  .gitignore  GOOGLE_SHEETS_SETUP_GUIDE.md  README.md  REQUIREMENTS.md  opensearch_log_search_plan.md  pyproject.toml  repo_enhancement_plan.md  requirements-dev.txt  requirements.txt
src/: cli.py  config.py  environments.py  markdown.py  models.py  parsing.py  query.py  scraper.py  sheets.py
src/opensearch_scrape/: __init__.py  cli.py  config.py  environments.py  markdown.py  models.py  parsing.py  query.py  scraper.py  sheets.py
src/templates/: report.md.j2
tests/: test_config.py  test_environments.py  test_markdown.py  test_parsing.py  test_query.py  test_scraper.py  test_sheets.py
