[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "open-search-scrape"
version = "0.1.0"
description = "Scrape OpenSearch Dashboard logs into Markdown and Google Sheets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gspread>=6.1,<7",
  "google-auth>=2.35,<3",
  "google-auth-oauthlib>=1.2,<2",
  "jinja2>=3.1,<4",
  "playwright>=1.49,<2",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
open-search-scrape = "opensearch_scrape.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opensearch_scrape"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
